fixed navbar overlapping

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -6,7 +6,7 @@
   align-items: center;
   position: fixed;
   top: 0;
-  z-index: 1;
+  z-index: 2;
   background-color: rgba(26, 26, 29, 01);
   backdrop-filter: blur(3px);
 }
